feat(management): PKCE support for org-level IDPs - apply review improvements
AM-3685, AM-3962

feat(gateway): lint:fix

AM-3962